# spark_sql_python

./: .gitignore  README.md  pyproject.toml
course/: sparkSession.py
course/config/: reference.json  sparkSession.py
course/project/: __init__.py  api_vs_sql.py  basic_sql_operations.py  data_exploration_manipulation.py  data_ingestion_schema_evolution.py  ingestion_schema_evolution.py  spark_fundamentals.py  transformations.py
spark_sql_python/: common.py  config.py  main.py
spark_sql_python/data/schemas/: iris.json
spark_sql_python/domain/energy/data/schemas/: biofuel-production.json
spark_sql_python/domain/energy/src/: __init__.py  best_practices.py  data_ingestion_schema_evolution.py  spark_fundamentals.py
spark_sql_python/src/: __init__.py
spark_sql_python/src/a_fundamentals/: __init__.py  spark_fundamentals.py
spark_sql_python/src/application/domain/: __init__.py  sources.py
spark_sql_python/src/b_ingestion/: __init__.py  data_ingestion_schema_evolution.py
spark_sql_python/src/c_exploration/: __init__.py  data_exploration_manipulation.py
spark_sql_python/src/domain/: __init__.py
spark_sql_python/src/domain/exploration/: data_exploration_manipulation.py
spark_sql_python/src/domain/fundamentals/: spark_fundamentals.py
spark_sql_python/src/domain/ingestion/: data_ingestion_schema_evolution.py
spark_sql_python/src/domain/optimization/: query_optimization.py
spark_sql_python/src/e_external/: external_data_sources.py
