[tool.poetry]
name = "spark-sql-python"
version = "0.1.0"
description = "spark sql course - pyspark"
authors = ["moises osorio"]
readme = "README.md"
packages = [{include = "spark_sql_python"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.0"
pydantic = "2.7.0"
pydantic-settings = '2.2.1'
pydantic-spark = '1.0.1'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
